# nepenthes header Makefile
# Maximillian Dornseif
# $Id: Makefile.am 1870 2005-08-19 22:56:37Z md $

# mostly for generating the dist target

EXTRA_DIST = Buffer.hpp LuaFunctions.hpp Compatibility.hpp LuaInterface.hpp Config.hpp Manager.hpp ConsoleLogger.hpp Message.hpp DNSHandler.hpp Module.hpp DNSManager.hpp ModuleManager.hpp DNSQuery.hpp Nepenthes.hpp DNSResult.hpp POLLSocket.hpp Dialogue.hpp Packet.hpp DialogueFactory.hpp RAWSocket.hpp DialogueFactoryManager.hpp Responder.hpp Download.hpp ShellcodeHandler.hpp DownloadBuffer.hpp ShellcodeManager.hpp DownloadHandler.hpp Socket.hpp DownloadManager.hpp DownloadUrl.hpp SocketEvent.hpp Event.hpp SocketManager.hpp EventHandler.hpp SubmitEvent.hpp EventManager.hpp SubmitHandler.hpp FILESocket.hpp SubmitManager.hpp FileLogger.hpp TCPSocket.hpp LogHandler.hpp UDPSocket.hpp LogHandlerEntry.hpp UDSSocket.hpp LogManager.hpp Utilities.hpp
